2006-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/check/simple.c: (GST_START_TEST), (gnonlin_suite):
	Added new test to check start/duration/stop correctness for
	sources and compositions.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_remove_ghost_pad):
	Free the GnlPadPrivate once we have removed the pad.

2006-04-04  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (update_pipeline):
	update_pipeline was returning the wrong information.
	It now returns FALSE only if there was an error updating the pipeline.
	* tests/check/simple.c: (GST_START_TEST):
	The test fails if the state_change() DOES return FAILURE.

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	New pre-release (0.10.0.10).
	Required version of gstreamer core/-base is 0.10.4.
	* tests/check/simple.c: (gnonlin_suite):
	Only run the tests with core > 0.10.4.0

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* tests/check/simple.c: (GST_START_TEST):
	When the pipeline is set to NULL, on slow/loaded systems the pipeline
	might not have reached that state yet when checking for the refcount
	of the pipeline/bus. We now check that refcount is between 1 and 2 now.

2006-04-03  Edward Hervey  <edward@fluendo.com>

	* gnl/gnl.c: (plugin_init):
	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(hash_value_destroy), (gnl_composition_init),
	(gnl_composition_dispose), (gnl_composition_finalize),
	(unlock_child_state), (ready_and_lock_child_state),
	(gnl_composition_reset), (gnl_composition_handle_message),
	(priority_comp), (have_to_update_pipeline), (get_new_seek_event),
	(handle_seek_event), (gnl_composition_event_handler),
	(gnl_composition_ghost_pad_set_target), (get_stack_list),
	(get_clean_toplevel_stack), (get_src_pad),
	(gnl_composition_prepare), (gnl_composition_change_state),
	(objects_start_compare), (objects_stop_compare),
	(update_start_stop_duration), (no_more_pads_object_cb),